Fix New Task Drag

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					<i class="fa fa-check-square-o" aria-hidden="true" style="width:10px;margin-right:10px;"></i> Finished <br/><br/>
 					<span id="finish-instructions" ondragover="highlightFinish(event)" style="pointer-events: none;display:none;">Drop here to Finish Task</span>
 			</div>
-			<div id="new-task-drag" class="new-task-drag task-block medium-block now-task" draggable="true" style="margin-right:30px;float:right;width:100px;height:100px;background-color:LemonChiffon;vertical-align:center;" ondragstart="dragNew(event)" >
+			<div id="new-task-drag" class="new-task-drag task-block" draggable="true" style="text-align:center;margin-right:30px;float:right;width:100px;height:100px;background-color:LemonChiffon;vertical-align:center;box-shadow:0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24)" ondragstart="dragNew(event)" >
 				<br/>Drag for new task
 			</div>
 		</div>
