Fix Toolbar Alignment

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			</div>
 		</div>
 		<div id="middle-buttons" style="diplay:none;user-select:none;">
-			<div class="middle-button">
+			<div class="middle-button" style="top:-0.5em;">
 				<label for="task-shape">Shape</label><br/>
 				<div class="btn-group-vertical" role="group">
 					<button type="button" class="btn btn-default shape-button" id="shape-button-default" onclick="makeShapeDefault()">
