--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <script type="text/javascript" src="js/googleanalytics.js"></script>
     <script type="text/javascript" src="js/colorconvert.js"></script>
 
+    <script type="text/javascript" src="fingers.js-master/fingers.js"></script>
+	
     <link href="https://swisnl.github.io/jQuery-contextMenu/dist/jquery.contextMenu.css" rel="stylesheet" type="text/css">
     <script src="https://swisnl.github.io/jQuery-contextMenu/dist/jquery.contextMenu.js" type="text/javascript"></script>
     <script src="https://swisnl.github.io/jQuery-contextMenu/dist/jquery.ui.position.min.js" type="text/javascript"></script>
@@ -34,7 +36,7 @@
 		}
 	</style>
 </head>
-<body ondrop="newRow(event)" ondragover="allowDrop(event)" style="min-height:90%;" draggable="false">
+<body id="myBody" ondrop="newRow(event)" ondragover="allowDrop(event)" style="min-height:90%;" draggable="false">
     <h1 style="margin-left:20px;" class="app-header">Task Board by LevenTech</h1>
 	<div id="taskboard-toolbar">
 		<div id="left-buttons">
