--- a/index.html
+++ b/index.html
@@ -40,23 +40,26 @@
     <h1 style="margin-left:20px;" class="app-header">Task Board by LevenTech</h1>
 	<div id="taskboard-toolbar">
 		<div id="left-buttons">
-			<div style="float:left;height:100px;margin:10px;padding:10px;background:#F0F0F0;margin-left:15px;user-select:none;">
+			<div style="float:left;margin:10px;padding:10px;background:#F0F0F0;margin-left:15px;user-select:none;">
 				<div id="open-local-file" class="fileinput fileinput-new" data-provides="fileinput" style="margin-left:0px;">
-					<button class="btn btn-default toolbar-button newfile-button" onclick="newFile()" style="float:left;margin:10px;margin-left:0px;">
-						<i class="fa fa-file-code-o" aria-hidden="true" style="width:10px;margin-right:10px;"></i>New File
-					</button>
-					<span class="btn btn-default btn-file" style="float:left;margin:10px;margin-left:0px;">
-						<i class="fa fa-folder-o" aria-hidden="true" style="width:10px;margin-right:10px;"></i>
-						<span>Open File</span>
-						<input type="file" id="csvFileInput" onchange="handleFiles(this.files)" onclick="this.value=null;" accept=".csv"/>
-					</span>
-					<br/><br/><br/>
-					<span style="margin-left:0px;"><strong>Current File:</strong></span>
-					<span class="fileinput-filename"></span>
-					<span class="fileinput-new">No file chosen</span>
-					<span id="unsaved-changes" title="You have changes that haven't been saved to a file yet." style="display:none;">
-						<i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
-					</span>
+					<div>
+						<button class="btn btn-default toolbar-button newfile-button" onclick="newFile()" style="margin:10px;margin-left:0px;margin-bottom:0px;">
+							<i class="fa fa-file-code-o" aria-hidden="true" style="width:10px;margin-right:10px;"></i>New File
+						</button>
+						<span class="btn btn-default btn-file" style="margin:10px;margin-left:0px;margin-bottom:0px;">
+							<i class="fa fa-folder-o" aria-hidden="true" style="width:10px;margin-right:10px;"></i>
+							<span>Open File</span>
+							<input type="file" id="csvFileInput" onchange="handleFiles(this.files)" onclick="this.value=null;" accept=".csv"/>
+						</span>
+					</div>
+					<div style="margin-top:10px;>
+						<span style="margin-left:0px;"><strong>Current File:</strong></span>
+						<span class="fileinput-filename"></span>
+						<span class="fileinput-new">No file chosen</span>
+						<span id="unsaved-changes" title="You have changes that haven't been saved to a file yet." style="display:none;">
+							<i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+						</span>
+					</div>
 				</div>
 				<span id="result"></span>
 			</div>
