--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 			<div id="finish-area" class="finish-area normal-finish" ondrop="dropFinish(event)" ondragover="highlightFinish(event)" ondragleave="unhighlightFinish(event)" style="">
 					<i class="fa fa-check-square-o" aria-hidden="true" style="width:10px;margin-right:10px;"></i> Finished <br/><br/>
 					<span id="finish-instructions" ondragover="highlightFinish(event)" style="pointer-events: none;display:none;">Drop here to Finish Task</span>
+					<span id="finished-list" style="pointer-events: none;"></span>
 			</div>
 			<div id="new-task-drag" class="new-task-drag task-block" draggable="true" style="text-align:center;margin-right:30px;float:right;width:100px;height:100px;background-color:LemonChiffon;vertical-align:center;box-shadow:0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24)" ondragstart="dragNew(event)" >
 				<br/>Drag for new task
