--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <script type="text/javascript" src="js/colorconvert.js"></script>
 
     <script type="text/javascript" src="fingers.js-master/fingers.js"></script>
+
+    <script type="text/javascript" src="nouislider/nouislider.js"></script>
+	<link rel="stylesheet" href="nouislider/nouislider.css">
 	
     <link href="https://swisnl.github.io/jQuery-contextMenu/dist/jquery.contextMenu.css" rel="stylesheet" type="text/css">
     <script src="https://swisnl.github.io/jQuery-contextMenu/dist/jquery.contextMenu.js" type="text/javascript"></script>
