Fix Sizes for Mobile Toolbar

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 			</div>
 		</div>
 		<div id="middle-buttons" style="diplay:none;user-select:none;">
-			<div style="width:100%;font-size:24px;">
-			<div id="tool-select-control" style="float:left;display:none;padding-left:1em;margin-top:1em;padding-right:1em;">
+			<div style="width:100%;">
+			<div id="tool-select-control" style="font-size:24px;float:left;display:none;padding-left:1em;margin-top:1em;padding-right:1em;">
 				Control:<br/>
 				<select id="tool-selector" class="dropdown tool-selector">
 					<option disabled selected value></option>
