Remember Selected Tool

--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
 			<div id="tool-select-control" style="font-size:24px;float:left;display:none;padding-left:1em;margin-top:1em;padding-right:1em;">
 				Control:<br/>
 				<select id="tool-selector" class="dropdown tool-selector">
-					<option disabled selected value></option>
-					<option value="new-open-file">New/Open File</option>
-					<option value="size-shape">Size/Shape</option>
+					<option disabled value=""></option>
+					<option value="new-open-file">New File / Open File</option>
+					<option value="draggables">New Task / Finish Task</option>
+					<option value="size-shape">Task Shape / Task Size</option>
 					<option value="future-peek">Future Peek</option>
-					<option value="draggables">Draggables</option>
 				</select><br/>
 			</div>
 			<div class="toolbar-selection" id="size-shape" style="float:left;">
