Fix Right Click Indicator

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body id="myBody" ondrop="newRow(event)" ondragover="allowDrop(event)" draggable="false">
     <div style="width:100%;">
 		<h1 style="float:left;margin-left:20px;" class="app-header" id="app-header">Task Board by LevenTech</h1>
-		<div id="right-click-mode-indicator" style="float:left;text-align:center;margin:1em;margin-left:24em;font-size:20px;color:white;font-weight:bold;">** IN RIGHT CLICK MODE **</div>
+		<div id="right-click-mode-indicator" class="right-click-mode-indicator" style="float:left;text-align:center;margin:1em;margin-left:24em;font-size:20px;color:white;font-weight:bold;">** IN RIGHT CLICK MODE **</div>
 	</div>
 	<div id="taskboard-toolbar">
 		<div id="left-buttons">
