Disable Context Menu on Drag Task

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 						<span id="finish-instructions" ondragover="highlightFinish(event)" style="pointer-events: none;display:none;">Drop here to Finish Task</span>
 						<span id="finished-list" style="pointer-events: none;"></span>
 				</div>
-				<div id="new-task-drag" class="new-task-drag task-block" draggable="true" style="padding-top:1.5em;text-align:center;margin-right:30px;float:right;width:100px;height:100px;background-color:LemonChiffon;vertical-align:center;box-shadow:0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24)" ondragstart="dragNew(event)" >
+				<div id="new-task-drag" class="new-task-drag" draggable="true" ondragstart="dragNew(event)" >
 					Drag for new task
 				</div>
 			</div>
