--- a/index.html
+++ b/index.html
@@ -123,40 +123,73 @@
 	</div>
 	<br/>
 	<div class="my-dialog" id="editDialog">
-		<table style="float:left;width:100%;height:100%;">
+		<table style="float:left;width:100%;height:50%;">
+			<tr style="height:1em;background:lightgray;">
+				<td colspan="2" style="text-align:center;">
+					<button type="button" class="btn btn-default" style="padding-left:10px;padding-right:10px;padding-top:2px;padding-bottom:2px;font-size:12px;margin-top:0.2em;margin-bottom:0.2em;" onclick="completeTask();">
+						<i class="fa fa-check-square-o" aria-hidden="true" style="margin-right:5px;"></i>Finish
+					</button>
+					<button type="button" class="btn btn-default" style="padding-left:10px;padding-right:10px;padding-top:2px;padding-bottom:2px;margin-left:1em;font-size:12px;margin-top:0.2em;margin-bottom:0.2em;" onclick="deleteTask();">
+						<i class="fa fa-trash" aria-hidden="true" style="margin-right:5px;"></i>Delete
+					</button>	
+				</td>
+			</tr>
+			<tr style="height:0.5em;"></tr>
 			<tr style="vertical-align:top;">
-				<td style="min-width:100px;padding-top:3px;">Task Name:</td>
-				<td>
-					<textarea type="text" cols="21" rows="2" id="namepicker" style="width:100%;margin-bottom:5px;resize:none;"></textarea>
-					<button type="button" class="btn btn-default" style="padding:5px;padding-top:1px;padding-bottom:1px;margin-left:0px;font-size:12px;" onclick="completeTask();">
-					<i class="fa fa-check-square-o" aria-hidden="true" style="margin-right:5px;"></i>Finish</button>		
-					<button type="button" class="btn btn-default" style="padding:5px;padding-top:1px;padding-bottom:1px;margin-left:2px;font-size:12px;" onclick="deleteTask();">
-					<i class="fa fa-trash" aria-hidden="true" style="margin-right:5px;"></i>Delete</button>						
+				<td colspan="3">
+					<textarea type="text" cols="21" rows="2" id="namepicker" style="width:100%;margin-bottom:5px;resize:none;text-align:center;"></textarea>
 				</td>
 			</tr>
-			<tr style="height:15px;"></tr>
-			<tr style="height:30px;"><td>Start Date:</td><td><input type="date" id="datepicker-start" style="width:100%;"></td></tr>
-			<tr><td>Due Date:</td><td><input type="date" id="datepicker-due" style="width:100%;"></td></tr>
-			<tr style="height:30px;"></tr>
-			<tr style="height:30px;">
-				<td>Color:</td>
-				<td>
-					<table><tr><td><input style="float:left;" type='color' id="colorpicker2" onchange="colorpicked();" /></td>
-					<td><input style="padding-left:3px;float:left;width:175px;width:100%;" type="text" id="colorpicker" onchange="colortyped();" /></td></tr></table>
-				</td>
+			<tr style="height:1em;"></tr>
+			<tr style="height:2em;"><td>Start:</td><td><input type="date" id="datepicker-start" style="width:60%;"><input type="time" id="timepicker-start" style="width:40%;"></td></tr>
+			<tr><td>Due:</td><td><input type="date" id="datepicker-due" style="width:60%;"><input type="time" id="timepicker-start" style="width:40%;"></td></tr>
+		</table>
+		<table style="float:left;width:100%;text-align:center;">
+			<tr style="height:0.5em;"></tr>
+			<tr style="height:2em;">
+				<td colspan="2" style="width:60%;">Color</td>
+				<td style="padding-right:0.3em;" style="width:40%;">Interval</td>
 			</tr>
-			<tr style="height:30px;">
-				<td>Interval:</td>
+			<tr style="vertical-align:top;">
+				<td style="width:40%;">
+					<div class="btn-group" role="group" style="float:right;">
+						<button type="button" class="btn btn-default color-button" id="color-button-LemonChiffon" onclick="changeColor('LemonChiffon')"><div class="circle" style="background:LemonChiffon;"></div></button>
+						<button type="button" class="btn btn-default color-button" id="color-button-Aqua" onclick="changeColor('Aqua')"><div class="circle" style="background:Aqua;"></div></button>
+						<button type="button" class="btn btn-default color-button" id="color-button-Pink" onclick="changeColor('Pink')"><div class="circle" style="background:Pink;"></div></button>
+						<button type="button" class="btn btn-default color-button" id="color-button-PaleGreen" onclick="changeColor('PaleGreen')"><div class="circle" style="background:PaleGreen;"></div></button>
+						<button type="button" class="btn btn-default color-button" id="color-button-Silver" onclick="changeColor('Silver')"><div class="circle" style="background:Silver;"></div></button>
+					</div>
+					<div class="btn-group" role="group" style="float:right;">
+						<button type="button" class="btn btn-default color-button" id="color-button-Yellow" onclick="changeColor('Yellow')"><div class="circle" style="background:Yellow;"></div></button>
+						<button type="button" class="btn btn-default color-button" id="color-button-Orange" onclick="changeColor('Orange')"><div class="circle" style="background:Orange;"></div></button>
+						<button type="button" class="btn btn-default color-button" id="color-button-Red" onclick="changeColor('Red')"><div class="circle" style="background:Red;"></div></button>
+						<button type="button" class="btn btn-default color-button" id="color-button-Blue" onclick="changeColor('Blue')"><div class="circle" style="background:Blue;"></div></button>
+						<button type="button" class="btn btn-default color-button" id="color-button-Black" onclick="changeColor('Black')"><div class="circle" style="background:Black;"></div></button>
+					</div>
+				</td>
 				<td>
+					<input style="float:left;width:3.4em;height:3.4em;" type='color' id="colorpicker2" onchange="colorpicked();" />
+				</td>
+				<td style="width:12em;">
 					<div class="btn-group" role="group">
+						  <button type="button" class="btn btn-default interval-button" id="interval-button0" onclick="changeInterval(0)">X</button>
 						  <button type="button" class="btn btn-default interval-button" id="interval-button1" onclick="changeInterval(1)">1</button>
 						  <button type="button" class="btn btn-default interval-button" id="interval-button2" onclick="changeInterval(2)">2</button>
 						  <button type="button" class="btn btn-default interval-button" id="interval-button3" onclick="changeInterval(3)">3</button>
+					</div>
+					<div class="btn-group" role="group">
 						  <button type="button" class="btn btn-default interval-button" id="interval-button7" onclick="changeInterval(7)">7</button>
 						  <button type="button" class="btn btn-default interval-button" id="interval-button14" onclick="changeInterval(14)">14</button>
 						  <button type="button" class="btn btn-default interval-button" id="interval-button30" onclick="changeInterval(30)">30</button>
-						  <input type="text" id="incrementpicker" onchange="checkInterval()" style="padding-right:3px;width:84px;height:34px;text-align:right;">
 					</div>
+				</td>
+			</tr>
+			<tr>
+				<td colspan="2">
+					<input type="text" id="colorpicker" onchange="colortyped();" style="width:8em;margin-top:0.4em;text-align:center;" />
+				</td>
+				<td>
+					<input type="text" id="incrementpicker" onchange="checkInterval()" style="margin-top:0.4em;width:4em;text-align:center;" />
 				</td>
 			</tr>
 			</table>
