Better N/A Button for Interval

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 				</td>
 				<td style="width:12em;">
 					<div class="btn-group" role="group">
-						  <button type="button" class="btn btn-default interval-button" id="interval-button0" onclick="changeInterval(0)">X</button>
+						  <button type="button" class="btn btn-default interval-button" id="interval-button0" onclick="changeInterval(0)" style="width:1.4em;">-</button>
 						  <button type="button" class="btn btn-default interval-button" id="interval-button1" onclick="changeInterval(1)">1</button>
 						  <button type="button" class="btn btn-default interval-button" id="interval-button2" onclick="changeInterval(2)">2</button>
 						  <button type="button" class="btn btn-default interval-button" id="interval-button3" onclick="changeInterval(3)">3</button>
