Added Time Fields

--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
 					</div>
 				</div>
 				<div class="toolbar-selection" id="future-peek" style="float:left;">
-					<div class="middle-button" style="top:0em;">
+					<div class="middle-button" style="top:0em;margin-left:2em;">
 					  <label for="date-select">Show for:</label>
-					  <input type="text" id="todays-date" readonly style="user-select:none;text-align:center;width:8em;px;border:0; color:#000000; font-weight:bold;">
-					  <div id="todays-date-slider" style="margin-top:10px;width:15em;"></div>
+					  <input type="text" id="todays-date" readonly style="user-select:none;text-align:center;width:12em;px;border:0; color:#000000; font-weight:bold;">
+					  <div id="todays-date-slider" style="margin-left:1em;margin-top:10px;width:15em;"></div>
 					</div>
 				</div>
 			</div>			
@@ -142,7 +142,7 @@
 			</tr>
 			<tr style="height:1em;"></tr>
 			<tr style="height:2em;"><td>Start:</td><td><input type="date" id="datepicker-start" style="width:60%;"><input type="time" id="timepicker-start" style="width:40%;"></td></tr>
-			<tr><td>Due:</td><td><input type="date" id="datepicker-due" style="width:60%;"><input type="time" id="timepicker-start" style="width:40%;"></td></tr>
+			<tr><td>Due:</td><td><input type="date" id="datepicker-due" style="width:60%;"><input type="time" id="timepicker-due" style="width:40%;"></td></tr>
 		</table>
 		<table style="float:left;width:100%;text-align:center;">
 			<tr style="height:0.5em;"></tr>
