--- a/index.html
+++ b/index.html
@@ -123,29 +123,26 @@
 	</div>
 	<br/>
 	<div class="my-dialog" id="editDialog">
+		<div style="position:absolute;left:10em;top:0.3em;" id="dialog-toolbar">
+				<button type="button" class="btn btn-default" style="padding-left:10px;padding-right:10px;padding-top:2px;padding-bottom:2px;font-size:12px;margin-top:0.2em;margin-bottom:0.2em;" onclick="completeTask();">
+					<i class="fa fa-check-square-o" aria-hidden="true" style="margin-right:5px;"></i>Finish
+				</button>
+				<button type="button" class="btn btn-default" style="padding-left:10px;padding-right:10px;padding-top:2px;padding-bottom:2px;margin-left:1em;font-size:12px;margin-top:0.2em;margin-bottom:0.2em;" onclick="deleteTask();">
+					<i class="fa fa-trash" aria-hidden="true" style="margin-right:5px;"></i>Delete
+				</button>	
+		</div>
 		<table style="float:left;width:100%;height:50%;">
-			<tr style="height:1em;background:lightgray;">
-				<td colspan="2" style="text-align:center;">
-					<button type="button" class="btn btn-default" style="padding-left:10px;padding-right:10px;padding-top:2px;padding-bottom:2px;font-size:12px;margin-top:0.2em;margin-bottom:0.2em;" onclick="completeTask();">
-						<i class="fa fa-check-square-o" aria-hidden="true" style="margin-right:5px;"></i>Finish
-					</button>
-					<button type="button" class="btn btn-default" style="padding-left:10px;padding-right:10px;padding-top:2px;padding-bottom:2px;margin-left:1em;font-size:12px;margin-top:0.2em;margin-bottom:0.2em;" onclick="deleteTask();">
-						<i class="fa fa-trash" aria-hidden="true" style="margin-right:5px;"></i>Delete
-					</button>	
-				</td>
-			</tr>
 			<tr style="height:0.5em;"></tr>
 			<tr style="vertical-align:top;">
 				<td colspan="3">
 					<textarea type="text" cols="21" rows="2" id="namepicker" style="width:100%;margin-bottom:5px;resize:none;text-align:center;"></textarea>
 				</td>
 			</tr>
-			<tr style="height:1em;"></tr>
 			<tr style="height:2em;"><td>Start:</td><td><input type="date" id="datepicker-start" style="width:60%;"><input type="time" id="timepicker-start" style="width:40%;"></td></tr>
 			<tr><td>Due:</td><td><input type="date" id="datepicker-due" style="width:60%;"><input type="time" id="timepicker-due" style="width:40%;"></td></tr>
 		</table>
 		<table style="float:left;width:100%;text-align:center;">
-			<tr style="height:0.5em;"></tr>
+			<tr style="height:0em;"></tr>
 			<tr style="height:2em;">
 				<td colspan="2" style="width:60%;">Color</td>
 				<td style="padding-right:0.3em;" style="width:40%;">Interval</td>
