Fix Dialog Buttons on other Dialogs

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 	</div>
 	<br/>
 	<div class="my-dialog" id="editDialog">
-		<div style="position:absolute;left:10em;top:0.3em;" id="dialog-toolbar">
+		<div style="position:absolute;left:10em;top:0.3em;display:none;" id="dialog-toolbar">
 				<button type="button" class="btn btn-default" style="padding-left:10px;padding-right:10px;padding-top:2px;padding-bottom:2px;font-size:12px;margin-top:0.2em;margin-bottom:0.2em;" onclick="completeTask();">
 					<i class="fa fa-check-square-o" aria-hidden="true" style="margin-right:5px;"></i>Finish
 				</button>
@@ -208,7 +208,7 @@
 		it.
 	</div>
 	<div class="my-dialog" id="saveDialog">
-		This file has not been saved, and you're about to lose your changes. Save it now?
+		This file has not been saved, and you're about to lose your changes.<br/><br/>Save your changes now?
 	</div>
 	<div class="my-dialog" id="newRowDialog" style="text-align:center;">
 		Name the new group:
