--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 </head>
 <body id="myBody" ondrop="newRow(event)" ondragover="allowDrop(event)" draggable="false">
-    <div style="width:100%;">
+    <div style="width:100%;background:darkgrey;">
 		<h1 style="float:left;margin-left:20px;" class="app-header" id="app-header">Task Board by LevenTech</h1>
 		<div id="right-click-mode-indicator" class="right-click-mode-indicator" style="float:left;text-align:center;margin:1em;margin-left:24em;font-size:20px;color:white;font-weight:bold;">** IN RIGHT CLICK MODE **</div>
 	</div>
