--- a/index.html
+++ b/index.html
@@ -111,20 +111,29 @@
 		<div id="right-buttons">
 			<div class="toolbar-selection" id="draggables">
 				<div id="finish-area" class="finish-area normal-finish" ondrop="dropFinish(event)" ondragover="highlightFinish(event)" ondragleave="unhighlightFinish(event)" style="">
-						<i class="fa fa-check-square-o" aria-hidden="true" style="width:10px;margin-right:10px;"></i> Finished <br/><br/>
-						<span id="finish-instructions" ondragover="highlightFinish(event)" style="pointer-events: none;display:none;">Drop here to Finish Task</span>
-						<span id="finished-list" style="pointer-events: none;"></span>
+					<i class="fa fa-check-square-o" aria-hidden="true" style="width:10px;margin-right:10px;"></i> Finished <br/><br/>
+					<span id="finish-instructions" ondragover="highlightFinish(event)" style="pointer-events: none;display:none;">Drop here to Finish Task</span>
+					<span id="finished-list" style="pointer-events: none;"></span>
+					<span id="show-finished-toggle" style="position:absolute;bottom:0.2em;left:5.5em;font-size:0.8em;">
+						<button id="delete-finished-button" class="btn btn-default" style="padding:0.2em;margin-bottom:0.2em;display:none;" onclick="deleteAllFinished()">
+							Delete All
+						</button><br/>
+						<button class="btn btn-default" style="padding:0.2em;" onclick="toggleFinishedVisible()">
+							<input style="margin-right:10px;pointer-events:none;" type="checkbox" id="show-finished" />Visible
+						</button>
+					</span>
 				</div>
 				<div id="new-task-drag" class="new-task-drag" draggable="true" ondragstart="dragNew(event)" >
 					Drag for new task
 				</div>
+				<br/>
 			</div>
 		</div>
 	</div>
 	<br/>
 	<div class="my-dialog" id="editDialog">
 		<div style="position:absolute;left:10em;top:0.3em;display:none;" id="dialog-toolbar">
-				<button type="button" class="btn btn-default" style="padding-left:10px;padding-right:10px;padding-top:2px;padding-bottom:2px;font-size:12px;margin-top:0.2em;margin-bottom:0.2em;" onclick="completeTask();">
+				<button id="edit-dialog-finish" type="button" class="btn btn-default" style="padding-left:10px;padding-right:10px;padding-top:2px;padding-bottom:2px;font-size:12px;margin-top:0.2em;margin-bottom:0.2em;" onclick="clickFinish();">
 					<i class="fa fa-check-square-o" aria-hidden="true" style="margin-right:5px;"></i>Finish
 				</button>
 				<button type="button" class="btn btn-default" style="padding-left:10px;padding-right:10px;padding-top:2px;padding-bottom:2px;margin-left:1em;font-size:12px;margin-top:0.2em;margin-bottom:0.2em;" onclick="deleteTask();">
@@ -212,6 +221,10 @@
 				<i class="fa fa-trash" aria-hidden="true" style="margin-right:5px;"></i>Delete</button>
 		 it instead.
 	</div>
+	<div class="my-dialog" id="uncompleteDialog">
+		Are you sure you want to UN-finish the task "<span id="uncompleteTaskName" ></span>"?<br/><br/>
+		This will add the task back to your board.<br/><br/>
+	</div>
 	<div class="my-dialog" id="deleteDialog">
 		Are you sure you want to DELETE the task "<span id="deleteTaskName" ></span>"?<br/><br/>
 		This will remove all trace of this task, from the board and your save file.<br/><br/> 
@@ -220,6 +233,9 @@
 				<i class="fa fa-check-square-o" aria-hidden="true" style="margin-right:5px;"></i>Finish</button>
 		it.
 	</div>
+	<div class="my-dialog" id="deleteFinishedDialog">
+		Are you sure you want to delete ALL finished tasks?<br/><br/>
+	</div>	
 	<div class="my-dialog" id="saveDialog">
 		This file has not been saved, and you're about to lose your changes.<br/><br/>Save your changes now?
 	</div>
