Finished Count in Dialog

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 		it.
 	</div>
 	<div class="my-dialog" id="deleteFinishedDialog">
-		Are you sure you want to delete ALL finished tasks?<br/><br/>
+		Are you sure you want to delete all <b id="deleteFinishedCount"></b> finished tasks?<br/><br/>
 	</div>	
 	<div class="my-dialog" id="saveDialog">
 		This file has not been saved, and you're about to lose your changes.<br/><br/>Save your changes now?
