Only 1 Date/Time picker on sync

--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
 					<br/>
 					Due:
 				</td>
-				<td><input type="date" id="datepicker-start" style="width:60%;"><input type="time" id="timepicker-start" style="width:40%;"></td>
+				<td id="startpicker-row"><input type="date" id="datepicker-start" style="width:60%;"><input type="time" id="timepicker-start" style="width:40%;"></td>
 			</tr>
-			<tr><td><input type="date" id="datepicker-due" style="width:60%;"><input type="time" id="timepicker-due" style="width:40%;"></td></tr>
+			<tr><td id="duepicker-row"><input type="date" id="datepicker-due" style="width:60%;"><input type="time" id="timepicker-due" style="width:40%;"></td></tr>
 		</table>
 		<table style="float:left;width:100%;text-align:center;">
 			<tr style="height:0em;"></tr>
