--- a/index.html
+++ b/index.html
@@ -43,16 +43,22 @@
 			<div class="toolbar-selection" id="new-open-file" style="float:left;margin:10px;padding:10px;background:#F0F0F0;margin-left:15px;user-select:none;">
 				<div id="open-local-file" class="fileinput fileinput-new" data-provides="fileinput" style="margin-left:0px;margin-bottom:0px;">
 					<div style="text-align:left;margin-left:10px;">
+						<div class="instructions">
+							If this is your first time here, start a 
+						</div>
 						<button id="newfile-button" class="btn btn-default toolbar-button newfile-button" onclick="newFile()" style="margin:10px;margin-left:0px;margin-bottom:0px;">
-							<i class="fa fa-file-code-o" aria-hidden="true" style="width:10px;margin-right:10px;"></i><span id="newfile-button-label">New File</span>
+							<i class="fa fa-clone" aria-hidden="true" style="width:10px;margin-right:10px;"></i><span id="newfile-button-label">New File</span>
 						</button>
+						<div class="instructions">
+							<br/>If you already have a file, use this: 
+						</div>
 						<span id="openfile-button" class="btn btn-default btn-file" style="margin:10px;margin-left:0px;margin-bottom:0px;">
 							<i class="fa fa-folder-o" aria-hidden="true" style="width:10px;margin-right:10px;"></i>
 							<span id="openfile-button-label">Open File</span>
 							<input type="file" id="csvFileInput" onchange="handleFiles(this.files)" onclick="this.value=null;" accept=".csv"/>
 						</span>
 					</div>
-					<div style="margin-top:10px;">
+					<div id="chosen-file-label" style="margin-top:10px;display:none;">
 						<strong>Current File:</strong>
 						<span class="fileinput-filename"></span>
 						<span class="fileinput-new">No file chosen</span>
@@ -64,7 +70,7 @@
 				<span id="result"></span>
 			</div>
 			<div style="float:left;margin-top:30px;margin-left:15px;user-select:none;">
-				<button class="btn btn-default toolbar-button savefile-button" id="savefile-button" onclick="saveFile()" style="margin:0px;padding:8px;" disabled>
+				<button class="btn btn-default toolbar-button savefile-button" id="savefile-button" onclick="saveFile()" style="margin:0px;padding:8px;display:none;" >
 					<div style="float:left;"><i class="fa fa-floppy-o" aria-hidden="true" style="width:40px;font-size:300%;margin-right:10px;"></i></div>
 					<div style="float:left;">Save<br/>to File</div>
 				</button>
