Add Context Menu for Rows

--- a/index.html
+++ b/index.html
@@ -249,6 +249,10 @@
 		Name the new group:
 		<input id="newRowName" width="50px" style="margin-top:10px;"></input>
 	</div>
+	<div class="my-dialog" id="renameRowDialog" style="text-align:center;">
+		Give the "<span id="current-row-name"></span>" group a new name:
+		<input id="renamedRowName" width="50px" style="margin-top:10px;"></input>
+	</div>
 	<div id="output" style="" draggable="false"></div>
 </body>
 </html>
