--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>Task Board by LevenTech</title>
+    <title>Task Board</title>
 
 	<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 	
@@ -35,7 +35,7 @@
 </head>
 <body id="myBody" ondrop="newRow(event)" ondragover="allowDrop(event)" draggable="false">
     <div style="width:100%;background:darkgrey;">
-		<h1 style="float:left;margin-left:20px;" class="app-header" id="app-header">Task Board by LevenTech</h1>
+		<h1 style="float:left;margin-left:20px;" class="app-header" id="app-header">Task Board by <a class="app-header" href="http://leven.tech">LevenTech</a></h1>
 		<div id="right-click-mode-indicator" class="right-click-mode-indicator" style="float:left;text-align:center;margin:1em;margin-left:24em;font-size:20px;color:white;font-weight:bold;">** IN RIGHT CLICK MODE **</div>
 	</div>
 	<div id="taskboard-toolbar">
