--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <script type="text/javascript" src="js/taskboard.js"></script>
     <script type="text/javascript" src="js/taskboard_draw.js"></script>
+    <script type="text/javascript" src="js/taskboard_toolbar.js"></script>
     <script type="text/javascript" src="js/task_edit.js"></script>
     <script type="text/javascript" src="js/taskboard_files.js"></script>
     <script type="text/javascript" src="js/tb_library.js"></script>
@@ -38,110 +39,11 @@
 
 </head>
 <body id="myBody" ondrop="newRow(event)" ondragover="allowDrop(event)" draggable="false">
-    <div style="width:100%;background:darkgrey;">
-		<h1 style="float:left;margin-left:20px;" class="app-header" id="app-header">Task Board by <a class="app-header" href="http://leven.tech">LevenTech</a></h1>
-		<div id="right-click-mode-indicator" class="right-click-mode-indicator" style="float:left;text-align:center;margin:1em;margin-left:24em;font-size:20px;color:white;font-weight:bold;">** IN RIGHT CLICK MODE **</div>
-		<a href="http://www.leven.tech/suggestions/" style="position:absolute;right:0px;top:0px;color:white;margin-top:5px;margin-right:20px;">Feedback?</a>
+	<div id="title-bar" style="">
+		<h1 style='float:left;margin-left:20px;' class='app-header' id='app-header'>Task Board by <a class='app-header' href='http://leven.tech'>LevenTech</a></h1>
+		<div id='right-click-mode-indicator' class='right-click-mode-indicator' style='float:left;text-align:center;margin:1em;margin-left:24em;font-size:20px;color:white;font-weight:bold;'>** IN RIGHT CLICK MODE **</div>
+		<a href='http://www.leven.tech/suggestions/' style='position:absolute;right:0px;top:0px;color:white;margin-top:5px;margin-right:20px;'>Feedback?</a>
 	</div>
-	<div id="taskboard-toolbar">
-		<div id="left-buttons">
-			<div class="toolbar-selection" id="new-open-file" style="float:left;margin:10px;padding:10px;background:#F0F0F0;margin-left:15px;user-select:none;">
-				<div id="open-local-file" class="fileinput fileinput-new" data-provides="fileinput" style="margin-left:0px;margin-bottom:0px;">
-					<div style="text-align:left;margin-left:10px;">
-						<div class="instructions">
-							If this is your first time here, start a 
-						</div>
-						<button id="newfile-button" class="btn btn-default toolbar-button newfile-button" onclick="newFile()" style="margin:10px;margin-left:0px;margin-bottom:0px;">
-							<i class="fa fa-clone" aria-hidden="true" style="width:10px;margin-right:10px;"></i><span id="newfile-button-label">New File</span>
-						</button>
-						<div class="instructions">
-							<br/>If you already have a file, use this: 
-						</div>
-						<span id="openfile-button" class="btn btn-default btn-file" style="margin:10px;margin-left:0px;margin-bottom:0px;">
-							<i class="fa fa-folder-o" aria-hidden="true" style="width:10px;margin-right:10px;"></i>
-							<span id="openfile-button-label">Open File</span>
-							<input type="file" id="csvFileInput" onchange="handleFiles(this.files)" onclick="this.value=null;" accept=".csv"/>
-						</span>
-					</div>
-					<div id="chosen-file-label" style="margin-top:10px;display:none;">
-						<strong>Current File:</strong>
-						<span class="fileinput-filename"></span>
-						<span class="fileinput-new">No file chosen</span>
-						<span id="unsaved-changes" title="You have changes that haven't been saved to a file yet." style="display:none;">
-							<i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
-						</span>
-					</div>
-				</div>
-				<span id="result"></span>
-			</div>
-			<div style="float:left;margin-top:30px;margin-left:15px;user-select:none;">
-				<button class="btn btn-default toolbar-button savefile-button" id="savefile-button" onclick="saveFile()" style="margin:0px;padding:8px;display:none;" >
-					<div style="float:left;"><i class="fa fa-floppy-o" aria-hidden="true" style="width:40px;font-size:300%;margin-right:10px;"></i></div>
-					<div style="float:left;">Save<br/>to File</div>
-				</button>
-			</div>
-		</div>
-		<div id="middle-buttons" style="diplay:none;user-select:none;">
-			<div style="width:100%;">
-			<div id="tool-select-control" style="font-size:24px;float:left;display:none;padding-left:1em;margin-top:1em;padding-right:1em;">
-				<b>Control:</b><br/>
-				<select id="tool-selector" class="dropdown tool-selector" style="height:3em;">
-					<option value="new-open-file">New File / Open File</option>
-					<option value="draggables">New Task / Finish Task</option>
-					<option value="size-shape">Task Shape / Task Size</option>
-					<option value="future-peek">Future Peek</option>
-				</select><br/>
-			</div>
-			<div class="toolbar-selection" id="size-shape" style="float:left;">
-					<div class="middle-button" style="top:-0.5em;">
-						<label for="task-shape">Shape</label><br/>
-						<div class="btn-group" role="group" style="height:2em;">
-							<button type="button" class="btn btn-default shape-button" id="shape-button-default" onclick="makeShapeDefault()" style="height:4em;">
-								<div style="height:1.2em;width:1.6em;background-color:black;border:2px solid black;margin-left:0.4em;margin-right:0.4em;"></div>
-							</button>
-							<button type="button" class="btn btn-default shape-button" id="shape-button-wide" onclick="makeShapeWide()" style="height:4em;">
-								<div style="height:0.8em;width:2em;background-color:black;border:2px solid black;"></div>
-							</button>
-						</div>
-					</div>
-					<div class="middle-button" style="top:-2em;">
-					  <label for="font-size">Task size:</label>
-					  <input type="text" id="font-size" readonly style="user-select:none;text-align:center;width:8em;border:0; color:#000000; font-weight:bold;">
-					  <div id="font-size-slider" style="margin-top:10px;width:13em;"></div>
-					</div>
-				</div>
-				<div class="toolbar-selection" id="future-peek" style="float:left;">
-					<div class="middle-button" style="top:0em;margin-left:2em;">
-					  <label for="date-select">Show for:</label>
-					  <input type="text" id="todays-date" readonly style="user-select:none;text-align:center;width:12em;px;border:0; color:#000000; font-weight:bold;">
-					  <div id="todays-date-slider" style="margin-left:1em;margin-top:10px;width:15em;"></div>
-					</div>
-				</div>
-			</div>			
-		</div>
-		<div id="right-buttons">
-			<div class="toolbar-selection" id="draggables">
-				<div id="finish-area" class="finish-area normal-finish" ondrop="dropFinish(event)" ondragover="highlightFinish(event)" ondragleave="unhighlightFinish(event)" style="">
-					<i class="fa fa-check-square-o" aria-hidden="true" style="width:10px;margin-right:10px;"></i> Finished <br/><br/>
-					<span id="finish-instructions" ondragover="highlightFinish(event)" style="pointer-events: none;display:none;">Drop here to Finish Task</span>
-					<span id="finished-list" style="pointer-events: none;"></span>
-					<span id="show-finished-toggle" style="position:absolute;bottom:0.2em;left:5.5em;font-size:0.8em;">
-						<button id="delete-finished-button" class="btn btn-default" style="padding:0.2em;margin-bottom:0.2em;display:none;" onclick="deleteAllFinished()">
-							Delete All
-						</button><br/>
-						<button class="btn btn-default" style="padding:0.2em;" onclick="toggleFinishedVisible()">
-							<input style="margin-right:10px;pointer-events:none;" type="checkbox" id="show-finished" />Visible
-						</button>
-					</span>
-				</div>
-				<div id="new-task-drag" class="new-task-drag" draggable="true" ondragstart="dragNew(event)" >
-					Drag for new task
-				</div>
-				<br/>
-			</div>
-		</div>
-	</div>
-	<br/>
 	<div class="my-dialog" id="uncompleteDialog">
 		Are you sure you want to UN-finish the task "<span id="uncompleteTaskName" ></span>"?<br/><br/>
 		This will add the task back to your board.<br/><br/>
