--- a/index.html
+++ b/index.html
@@ -16,11 +16,19 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/js/jasny-bootstrap.min.js"></script>
 
     <script type="text/javascript" src="js/taskboard.js"></script>
-    <script type="text/javascript" src="js/taskboard_draw.js"></script>
-    <script type="text/javascript" src="js/taskboard_toolbar.js"></script>
-    <script type="text/javascript" src="js/task_edit.js"></script>
-    <script type="text/javascript" src="js/taskboard_files.js"></script>
     <script type="text/javascript" src="js/tb_library.js"></script>
+
+    <script type="text/javascript" src="js/taskboard_files.js"></script>
+
+    <script type="text/javascript" src="js/taskboard_draw.js"></script>
+	<link rel="stylesheet" href="css/taskboard_draw.css">
+	
+    <script type="text/javascript" src="js/taskboard_toolbar.js"></script>
+	<link rel="stylesheet" href="css/taskboard_toolbar.css">
+	
+    <script type="text/javascript" src="js/task_edit.js"></script>
+	<link rel="stylesheet" href="css/task_edit.css">
+	
 
     <script type="text/javascript" src="js/googleanalytics.js"></script>
     <script type="text/javascript" src="js/colorconvert.js"></script>
