Added Copyright, Commented URL Storage

--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
 </head>
 <body id="myBody" ondrop="newRow(event)" ondragover="allowDrop(event)" draggable="false">
 	<div id="title-bar" style="">
-		<h1 style='float:left;margin-left:20px;' class='app-header' id='app-header'>Task Board by <a class='app-header' href='http://leven.tech'>LevenTech</a></h1>
+		<h1 style='float:left;margin-left:20px;' class='app-header' id='app-header'>
+			Task Board by <a class='app-header' href='http://leven.tech'>LevenTech</a>
+			<i class="fa fa-copyright" aria-hidden="true" style="font-size:0.4em;position:relative;top:-1em;left:-0.4em;"></i>
+		</h1>
 		<div id='right-click-mode-indicator' class='right-click-mode-indicator' style='float:left;text-align:center;margin:1em;margin-left:24em;font-size:20px;color:white;font-weight:bold;'>** IN RIGHT CLICK MODE **</div>
 		<a href='http://www.leven.tech/suggestions/' style='position:absolute;right:0px;top:0px;color:white;margin-top:5px;margin-right:20px;'>Feedback?</a>
 	</div>
