Added Remote Storage

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <script type="text/javascript" src="js/task_edit.js"></script>
 	<link rel="stylesheet" href="css/task_edit.css">
 	
-
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/remoteStorage/0.14.0/remotestorage.js" type="text/javascript"></script>
+	
     <script type="text/javascript" src="js/googleanalytics.js"></script>
     <script type="text/javascript" src="js/colorconvert.js"></script>
 
@@ -53,7 +54,7 @@
 			<i class="fa fa-copyright" aria-hidden="true" style="font-size:0.4em;position:relative;top:-1em;left:-0.4em;"></i>
 		</h1>
 		<div id='right-click-mode-indicator' class='right-click-mode-indicator' style='float:left;text-align:center;margin:1em;margin-left:24em;font-size:20px;color:white;font-weight:bold;'>** IN RIGHT CLICK MODE **</div>
-		<a href='http://www.leven.tech/suggestions/' style='position:absolute;right:0px;top:0px;color:white;margin-top:5px;margin-right:20px;'>Feedback?</a>
+		<a href='http://www.leven.tech/suggestions/' style='position:absolute;left:35em;top:0em;color:white;margin-top:5px;margin-right:20px;'>Feedback?</a>
 	</div>
 	<div id="output" style="" draggable="false"></div>
 </body>
