--- a/index.html
+++ b/index.html
@@ -51,10 +51,16 @@
 	<div id="title-bar" style="">
 		<h1 style='float:left;margin-left:20px;margin-top:10px;' class='app-header' id='app-header'>
 			Task Board by <a class='app-header' href='http://leven.tech'>LevenTech</a>
-			<i class="fa fa-copyright" aria-hidden="true" style="font-size:0.4em;position:relative;top:-1em;left:-0.4em;"></i>
+			<i class="fa fa-copyright fa-flip-horizontal" aria-hidden="true" style="font-size:0.4em;position:relative;top:-1em;left:-0.4em;"></i>
 		</h1>
 		<div id='right-click-mode-indicator' class='right-click-mode-indicator' style='float:left;text-align:center;margin:1em;margin-left:24em;font-size:20px;color:white;font-weight:bold;'>** IN RIGHT CLICK MODE **</div>
-		<a href='http://www.leven.tech/suggestions/' style='position:absolute;left:35em;top:0em;color:white;margin-top:5px;margin-right:20px;'>Feedback?</a>
+		<div id="page-links" style="position:absolute;top:0px;left:45%;margin-top:5px;color:white;">
+			<a href='https://www.gnu.org/licenses/gpl-3.0.en.html' style='color:white;'>License (GPLv3)</a>
+			-
+			<a href='https://unhosted.org/' style='color:white;'>Unhosted</a>
+			-
+			<a href='http://www.leven.tech/suggestions/' style='color:white;'>Give Feedback</a>
+		</div>
 	</div>
 	<div id="output" style="" draggable="false"></div>
 </body>
