--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<div id="page-links" style="position:absolute;top:0px;left:45%;margin-top:5px;color:white;">
 			<a href='https://www.gnu.org/licenses/gpl-3.0.en.html' style='color:white;'>License (GPLv3)</a>
 			-
-			<a href='https://unhosted.org/' style='color:white;'>Unhosted</a>
+			<a href='#' style='color:white;' onclick="showPrivacyDialog();">Privacy (unhosted)</a>
 			-
 			<a href='http://www.leven.tech/suggestions/' style='color:white;'>Give Feedback</a>
 		</div>
