--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 		</h1>
 		<div id='right-click-mode-indicator' class='right-click-mode-indicator' style='float:left;text-align:center;margin:1em;margin-left:24em;font-size:20px;color:white;font-weight:bold;'>** IN RIGHT CLICK MODE **</div>
 		<div id="page-links" style="position:absolute;top:0px;left:45%;margin-top:5px;color:white;">
-			<a href='https://www.gnu.org/licenses/gpl-3.0.en.html' style='color:white;'>License (GPLv3)</a>
+			<a href='https://www.gnu.org/licenses/gpl-3.0.en.html' style='color:white;' target='_blank' >License (GPLv3)</a>
 			-
 			<a href='#' style='color:white;' onclick="showPrivacyDialog();">Privacy (unhosted)</a>
 			-
-			<a href='http://www.leven.tech/suggestions/' style='color:white;'>Give Feedback</a>
+			<a href='http://www.leven.tech/suggestions/' style='color:white;' target='_blank' >Give Feedback</a>
 		</div>
 	</div>
 	<div id="output" style="" draggable="false"></div>
