--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 		</h1>
 		<div id='right-click-mode-indicator' class='right-click-mode-indicator' style='float:left;text-align:center;margin:1em;margin-left:24em;font-size:20px;color:white;font-weight:bold;'>** IN RIGHT CLICK MODE **</div>
 		<div id="page-links" style="position:absolute;top:0px;width:100%;text-align:center;margin-top:5px;color:white;">
-			<a href='#' style='color:white;' onclick="showAboutDialog();">About</a> -
+			<a href='javascript:void(0)' style='color:white;' onclick="showAboutDialog();">About</a> -
 			<a href='https://www.gnu.org/licenses/gpl-3.0.en.html' style='color:white;' target='_blank' >License (GPLv3)</a> -
-			<a href='#' style='color:white;' onclick="showPrivacyDialog();">Privacy</a> -
+			<a href='javascript:void(0)' style='color:white;' onclick="showPrivacyDialog();">Privacy</a> -
 			<a href='http://www.leven.tech/suggestions/' style='color:white;' target='_blank' >Feedback</a>
 		</div>
 	</div>
