--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-contextmenu/2.4.5/jquery.ui.position.min.js" integrity="sha256-C7HjUf9VdfVJ5Dxet+nW9wK7rKLAhEkEYMjGXsw7FM8=" crossorigin="anonymous"></script>
 
 </head>
-<body id="myBody" ondrop="newRow(event)" ondragover="allowDrop(event)" draggable="false" >
+<body id="myBody" ondrop="newRow(event)" ondragover="allowDrop(event)" draggable="false"  >
 	<div id="title-bar" style="">
 		<h1 style='float:left;margin-left:20px;margin-top:10px;' class='app-header' id='app-header'>
 			Task Board by <a class='app-header' href='http://leven.tech'>LevenTech</a>
 			<i class="fa fa-copyright fa-flip-horizontal" aria-hidden="true" style="font-size:0.4em;position:relative;top:-1em;left:-0.4em;"></i>
 		</h1>
 		<div id='right-click-mode-indicator' class='right-click-mode-indicator' style='float:left;text-align:center;margin:1em;margin-left:24em;font-size:20px;color:white;font-weight:bold;'>** IN RIGHT CLICK MODE **</div>
-		<div id="page-links" style="position:absolute;top:0px;left:45%;text-align:center;margin-top:5px;color:white;">
+		<div id="page-links" style="position:absolute;top:0px;left:45vw;text-align:center;margin-top:5px;color:white;">
 			<a href='javascript:void(0)' style='color:white;' onclick="showAboutDialog();">About</a> -
 			<a href='https://www.gnu.org/licenses/gpl-3.0.en.html' style='color:white;' target='_blank' >License (GPLv3)</a> -
 			<a href='javascript:void(0)' style='color:white;' onclick="showPrivacyDialog();">Privacy</a> -
