Better Toolbar Position

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 </head>
 <body id="myBody" ondrop="newRow(event)" ondragover="allowDrop(event)" draggable="false"  >
-	<div id="title-bar" style="">
+	<div id="title-bar" style="position:absolute;width:100%;top:0em;left:0em;">
 		<h1 style='float:left;margin-left:20px;margin-top:10px;' class='app-header' id='app-header'>
 			Task Board by <a class='app-header' href='http://leven.tech'>LevenTech</a>
 			<i class="fa fa-copyright fa-flip-horizontal" aria-hidden="true" style="font-size:0.4em;position:relative;top:-1em;left:-0.4em;"></i>
