--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script type="text/javascript" src="js/taskboard.js"></script>
 	<link rel="stylesheet" href="css/taskboard.css"></style>
     <script type="text/javascript" src="js/tb_library.js"></script>
+    <script type="text/javascript" src="js/taskboard_about.js"></script>
 
     <script type="text/javascript" src="js/taskboard_files.js"></script>
 
@@ -61,12 +62,6 @@
 			<i class="fa fa-copyright fa-flip-horizontal" aria-hidden="true" style="font-size:0.4em;position:relative;top:-1em;left:-0.4em;"></i>
 		</h1>
 		<div id='right-click-mode-indicator' class='right-click-mode-indicator' style='float:left;text-align:center;margin:1em;margin-left:24em;font-size:20px;color:white;font-weight:bold;'>** IN RIGHT CLICK MODE **</div>
-		<div id="page-links" style="position:absolute;top:0px;left:45vw;text-align:center;margin-top:5px;color:white;">
-			<a href='javascript:void(0)' style='color:white;' onclick="showAboutDialog();">About</a> -
-			<a href='https://www.gnu.org/licenses/gpl-3.0.en.html' style='color:white;' target='_blank' >License (GPLv3)</a> -
-			<a href='javascript:void(0)' style='color:white;' onclick="showPrivacyDialog();">Privacy</a> -
-			<a href='http://www.leven.tech/suggestions/' style='color:white;' target='_blank' >Feedback</a>
-		</div>
 	</div>
 	<div id="output" style="" draggable="false"></div>
 </body>
