More About Improvements

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     <script type="text/javascript" src="js/taskboard.js"></script>
 	<link rel="stylesheet" href="css/taskboard.css"></style>
     <script type="text/javascript" src="js/tb_library.js"></script>
+
     <script type="text/javascript" src="js/taskboard_about.js"></script>
+	<link rel="stylesheet" href="css/taskboard_about.css">
 
     <script type="text/javascript" src="js/taskboard_files.js"></script>
 
