--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Task Board</title>
-	<!-- v. 1.0 Begin Github to DeployHQ to BlueHost-->
+	<!-- v. 1.0.1 Test Auto-Deploy -->
 
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
